--- a/style.css
+++ b/style.css
@@ -1,109 +1,155 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Popins", sans-serif;
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: #222;
-  }
-  
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 20px;
+}
+
+.card {
+  width: 100%;
+  max-width: 470px;
+  background: linear-gradient(135deg, #00feba, #5b548a);
+  color: #fff;
+  border-radius: 20px;
+  padding: 40px 35px;
+  text-align: center;
+}
+
+.search {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.search input {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  color: #555;
+  padding: 10px 25px;
+  height: 60px;
+  border-radius: 30px;
+  flex: 1;
+  margin-right: 16px;
+  font-size: 18px;
+}
+
+.search button {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+}
+
+.search button img {
+  width: 16px;
+}
+
+.weather-icon {
+  width: 170px;
+  margin-top: 30px;
+}
+
+.weather h1 {
+  font-size: 80px;
+  font-weight: 500;
+}
+
+.weather h2 {
+  font-size: 45px;
+  font-weight: 400;
+  margin-top: -10px;
+}
+
+.details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-top: 50px;
+}
+
+.col {
+  display: flex;
+  align-items: center;
+  text-align: left;
+}
+
+.col img {
+  width: 40px;
+  margin-right: 10px;
+}
+
+.humidity,
+.wind {
+  font-size: 20px;
+  margin-top: -6px;
+}
+
+.weather {
+  display: none;
+}
+
+.error {
+  text-align: left;
+  margin-left: 10px;
+  font-size: 14px;
+  margin-top: 10px;
+  display: none;
+  color: red;
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 600px) {
   .card {
-    width: 90%;
-    max-width: 470px;
-    background: linear-gradient(135deg, #00feba, #5b548a);
-    color: #fff;
-    margin: 100px auto 0;
-    border-radius: 20px;
-    padding: 40px 35px;
-    text-align: center;
+    padding: 30px 25px;
+    border-radius: 15px;
   }
-  
-  .search {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
+
   .search input {
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    color: #555;
-    padding: 10px 25px;
-    height: 60px;
-    border-radius: 30px;
-    flex: 1;
-    margin-right: 16px;
-    font-size: 18px;
+    height: 50px;
+    font-size: 16px;
+    padding: 8px 20px;
   }
-  
+
   .search button {
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
+    width: 50px;
+    height: 50px;
   }
-  
-  .search button img {
-    width: 16px;
-  }
-  
+
   .weather-icon {
-    width: 170px;
+    width: 140px;
+    margin-top: 20px;
+  }
+
+  .weather h1 {
+    font-size: 60px;
+  }
+
+  .weather h2 {
+    font-size: 30px;
+  }
+
+  .details {
+    flex-direction: column;
+    gap: 20px;
     margin-top: 30px;
   }
-  
-  .weather h1 {
-    font-size: 80px;
-    font-weight: 500;
-  }
-  
-  .weather h2 {
-    font-size: 45px;
-    font-weight: 400;
-    margin-top: -10px;
-  }
-  
-  .details {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
-  }
-  
+
   .col {
-    display: flex;
-    align-items: center;
-    text-align: left;
+    justify-content: center;
   }
-  
-  .col img {
-    width: 40px;
-    margin-right: 10px;
-  }
-  
-  .humidity,
-  .wind {
-    font-size: 20px;
-    margin-top: -6px;
-  }
-  
-  .weather {
-    display: none;
-  }
-  
-  .error {
-    text-align: left;
-    margin-left: 10px;
-    font-size: 14px;
-    margin-top: 10px;
-    display: none;
-    color: red;
-  }
+}
